--- a/index.html
+++ b/index.html
@@ -42,7 +42,78 @@
       <div class="vert-text">
 	      <img class="img-rounded" alt="Lucky Chang" src="img/logo-mini.jpg" width="100" height="100"/>
         <h2><em>Lucky in the House</em></h2>
-				<h3>網站維護中……</h3>
+        <br>
+<!--
+        <div id="lang">
+            <a class="btn btn-top" onclick="document.getElementById('en').style.display='none'; document.getElementById('zh').style.display=''; document.getElementById('lang').style.display='none'">中文版</a>
+            <a class="btn btn-top" onclick="document.getElementById('en').style.display=''; document.getElementById('zh').style.display='none'; document.getElementById('lang').style.display='none'">English</a>
+        </div>
+-->
+        <div id="zh" style="display:none">
+            <a class="btn btn-top" href="profile/?lang=zh">關於我</a>
+<!--            <a class="btn btn-top" onclick="document.getElementById('gallery-zh').style.display=''; document.getElementById('zh').style.display='none'">相簿</a> -->
+            <a class="btn btn-top" href="world/?lang=zh">相簿</a>
+            <a class="btn btn-top" onclick="document.getElementById('blog-zh').style.display=''; document.getElementById('zh').style.display='none'">文字</a>
+<!--            <a class="btn btn-top" href="">足跡</a> -->
+<!--            <a class="btn btn-top" onclick="document.getElementById('work-zh').style.display=''; document.getElementById('zh').style.display='none'">工作</a> -->
+            <a class="btn btn-top" href="project/?lang=zh">業餘項目</a>
+            <a class="btn btn-top" onclick="document.getElementById('zh').style.display='none'; document.getElementById('en').style.display=''">English</a>
+        </div>
+<!--
+        <div id="gallery-zh" style="display:none">
+            <a class="btn btn-top" href="world">相簿</a>
+            <a class="btn btn-top" onclick="document.getElementById('gallery-zh').style.display='none'; document.getElementById('zh').style.display=''">返回</a>
+        </div>
+-->
+        <div id="blog-zh" style="display:none">
+            <a class="btn btn-top" href="blog/escapade/?lang=zh">大壯遊</a>
+            <a class="btn btn-top" href="blog/fairytale/?lang=zh">半路上的童話故事</a>
+            <a class="btn btn-top" href="blog/hoshino/?lang=zh">星野遊學</a>
+            <a class="btn btn-top" href="blog/island/?lang=zh">荒島札記</a>
+            <a class="btn btn-top" onclick="document.getElementById('blog-zh').style.display='none'; document.getElementById('zh').style.display=''">返回</a>
+        </div>
+<!--
+        <div id="work-zh" style="display:none">
+            <a class="btn btn-top" href="">學術研究</a>
+            <a class="btn btn-top" href="project">個人計劃</a>
+            <a class="btn btn-top" onclick="document.getElementById('work-zh').style.display='none'; document.getElementById('zh').style.display=''">返回</a>
+        </div>
+-->
+<!--        <div id="en" style="display:none"> -->
+        <div id="en">
+            <a class="btn btn-top" href="profile">Profile</a>
+            <a class="btn btn-top" href="world">Gallery</a>
+            <!--
+            <a class="btn btn-top" onclick="document.getElementById('gallery').style.display=''; document.getElementById('en').style.display='none'">Gallery</a>
+            -->
+            <a class="btn btn-top" onclick="document.getElementById('blog').style.display=''; document.getElementById('en').style.display='none'">Blog</a>
+            <!--
+            <a class="btn btn-top" href="">Footprint</a>
+            <a class="btn btn-top" onclick="document.getElementById('work').style.display=''; document.getElementById('en').style.display='none'">Work</a>
+            -->
+            <a class="btn btn-top" href="project">Project</a>
+
+            <a class="btn btn-top" onclick="document.getElementById('en').style.display='none'; document.getElementById('zh').style.display=''">中文版</a>
+
+        </div>
+        <div id="gallery" style="display:none">
+            <a class="btn btn-top" href="world">Fantastic World</a>
+            <!--<a class="btn btn-top" href="darling">Darling Darling</a>-->
+            <a class="btn btn-top" onclick="document.getElementById('gallery').style.display='none'; document.getElementById('en').style.display=''">Back</a>
+        </div>
+        <div id="blog" style="display:none">
+          <a class="btn btn-top" href="blog/escapade">The Grand Escapade</a>
+            <a class="btn btn-top" href="blog/fairytale">The Fairy Tale</a>
+            <a class="btn btn-top" href="blog/hoshino">Hoshino Story</a>
+            <a class="btn btn-top" href="blog/island">Island Diary</a>
+            <a class="btn btn-top" onclick="document.getElementById('blog').style.display='none'; document.getElementById('en').style.display=''">Back</a>
+        </div>
+        <div id="work" style="display:none">
+            <a class="btn btn-top" href="">Academic Research</a>
+            <a class="btn btn-top" href="project">Side Project</a>
+            <a class="btn btn-top" onclick="document.getElementById('work').style.display='none'; document.getElementById('en').style.display=''">Back</a>
+        </div>
+
       </div>
     </div>
   <!-- Header Area -->
@@ -67,6 +138,48 @@
 	  <script src="js/jquery.validate.min.js"></script>
 	  <script src="js/script.js"></script>
 	  <script src="js/bootstrap.js"></script>
+	
+  <!-- Slideshow Background  -->
+	<script>
+  $.vegas('slideshow', {
+  delay:5000,
+  backgrounds:[
+    { src:'./img/20160928_1755_VictoriaQuarter.JPG', fade:2000 },
+    { src:'./img/20140518_3271_Dotonbori.JPG', fade:2000 },
+	  { src:'./img/20141129_0151_SensoTemple.JPG', fade:2000 },
+	  { src:'./img/20160502_0912_FushimiInariShrine.JPG', fade:2000 },
+	  { src:'./img/20150521_6061_KurobeDam.JPG', fade:2000 },
+	  { src:'./img/20150809_0592_LakeKawaguchi.JPG', fade:2000 },
+	  { src:'./img/20150203_010709_Tallinn', fade:2000 },
+	  { src:'./img/20150204_131016_Riga.JPG', fade:2000 },
+    { src:'./img/20150205_162008_Sigulda.JPG', fade:2000 },
+    { src:'./img/20150209_174851_Vilnius.JPG', fade:2000 },
+	  { src:'./img/20150213_104111_Wroclaw.JPG', fade:2000 },
+    { src:'./img/20150402_2014_NhaTrang.JPG', fade:2000 },
+	  { src:'./img/20140405_1236_Makapuu.JPG', fade:2000 },
+	  { src:'./img/20160612_3250_SantaFeDepot.JPG', fade:2000 },
+	  { src:'./img/20150801_9024_Esplanade.JPG', fade:2000 },
+    { src:'./img/20160903_6484_KingsCross.JPG', fade:2000 },
+	  { src:'./img/20160910_8118_ArcDeTriomphe.JPG', fade:2000 },
+	  { src:'./img/20160914_8979_PonteDellAccademia.JPG', fade:2000 },
+	  { src:'./img/20161223_5902_PlaceKleber.JPG', fade:2000 },
+	  { src:'./img/20161228_7559_HungarianParliamentBuilding.JPG', fade:2000 },
+	  { src:'./img/20170101_8246_NewCastleStuttgart.JPG', fade:2000 },
+	  { src:'./img/20170102_8309_Schipfe.JPG', fade:2000 },
+    { src:'./img/20161226_6444_HallstattRailwayStation.JPG', fade:2000 },
+    { src:'./img/20161226_6769_HallstattMarkt.JPG', fade:2000 },
+	  { src:'./img/20170106_9466_JardinsDelEurope.JPG', fade:2000 },
+	  { src:'./img/20161227_6841_WienerOpernball.JPG', fade:2000 },
+    { src:'./img/20161231_8131_DancingHouse.JPG', fade:2000 },
+	  { src:'./img/20170103_8876_KleineScheidegg.JPG', fade:2000 }
+	   
+  ]
+  })('overlay', {
+  src:'./img/overlay.png'
+  });
+
+	</script>
+  <!-- /Slideshow Background -->
 
   <!-- Mixitup : Grid -->
     <script>
