--- a/navibar/navibar.html
+++ b/navibar/navibar.html
@@ -44,23 +44,23 @@
     <a class="mobile-btn" href="##" title="Hide navigation">Hide navigation</a>
 
     <ul id="nav" class="nav" style="background-color:#333;">
-        <li><a href="https://oz.nthu.edu.tw/~u9621125/">Home</a></li>
-        <li><a class="current" href="https://oz.nthu.edu.tw/~u9621125/profile/">Profile</a></li>
-        <li><a class="current" href="https://oz.nthu.edu.tw/~u9621125/world/">Gallery</a></li>
+        <li><a href="https://gj94fu4.github.io/">Home</a></li>
+        <li><a class="current" href="https://gj94fu4.github.io/profile/">Profile</a></li>
+        <li><a class="current" href="https://gj94fu4.github.io/world/">Gallery</a></li>
         <!--
         <li><a onmouseover="switchMenu(this,'gallery')" onmouseout="hideMenu()" onclick="switchMenu(this,'gallery')" href="#nav-wrap">Gallery</a>
             <ul id="gallery">
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/world/">Fantastic World</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/darling/">Darling Darling</a></li>
+                <li><a href="https://gj94fu4.github.io/world/">Fantastic World</a></li>
+                <li><a href="https://gj94fu4.github.io/darling/">Darling Darling</a></li>
             </ul>
         </li>
         -->
         <li><a onmouseover="switchMenu(this,'blog')" onmouseout="hideMenu()" onclick="switchMenu(this,'blog')" href="#nav-wrap">Blog</a>
             <ul id="blog">
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/escapade/">The Grand Escapade</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/fairytale/">The Fairy Tale</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/hoshino/">Hoshino Story</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/island/">Island Diary</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/escapade/">The Grand Escapade</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/fairytale/">The Fairy Tale</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/hoshino/">Hoshino Story</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/island/">Island Diary</a></li>
             </ul>
         </li>
         <!--
@@ -68,11 +68,11 @@
         <li><a onmouseover="switchMenu(this,'work')" onmouseout="hideMenu()" onclick="switchMenu(this,'work')" href="#nav-wrap">Work</a>
             <ul id="work">
                 <li><a href="">Academic Research</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/project/">Side Project</a></li>
+                <li><a href="https://gj94fu4.github.io/project/">Side Project</a></li>
             </ul>
         </li>
         -->
-        <li><a href="https://oz.nthu.edu.tw/~u9621125/project/">Project</a></li>
+        <li><a href="https://gj94fu4.github.io/project/">Project</a></li>
         <!-- <li><a href="">Research</a></li> -->
         <li><a onclick="document.body.className='zh'" style="cursor: pointer">中/EN</a></li>
     </ul> <!-- end #nav -->
