--- a/navibar/navibar_zh.html
+++ b/navibar/navibar_zh.html
@@ -44,15 +44,15 @@
     <a class="mobile-btn" href="##" title="Hide navigation">Hide navigation</a>
 
     <ul id="nav-zh" class="nav-zh" style="background-color:#333;">
-        <li><a href="https://oz.nthu.edu.tw/~u9621125/">　首頁　</a></li>
-        <li><a class="current" href="https://oz.nthu.edu.tw/~u9621125/profile/?lang=zh">　關於我　</a></li>
-        <li><a class="current" href="https://oz.nthu.edu.tw/~u9621125/world/?lang=zh">　相簿　</a></li>
+        <li><a href="https://gj94fu4.github.io/">　首頁　</a></li>
+        <li><a class="current" href="https://gj94fu4.github.io/profile/?lang=zh">　關於我　</a></li>
+        <li><a class="current" href="https://gj94fu4.github.io/world/?lang=zh">　相簿　</a></li>
         <li><a onmouseover="switchMenu(this,'blog')" onmouseout="hideMenu()" onclick="switchMenu(this,'blog')" href="#nav-wrap-zh">　文字　</a>
             <ul id="blog">
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/escapade/?lang=zh">大壯遊</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/fairytale/?lang=zh">半路上的童話故事</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/hoshino/?lang=zh">星野遊學</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/blog/island/?lang=zh">荒島札記</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/escapade/?lang=zh">大壯遊</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/fairytale/?lang=zh">半路上的童話故事</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/hoshino/?lang=zh">星野遊學</a></li>
+                <li><a href="https://gj94fu4.github.io/blog/island/?lang=zh">荒島札記</a></li>
             </ul>
         </li>
         <!--
@@ -60,11 +60,11 @@
         <li><a onmouseover="switchMenu(this,'work')" onmouseout="hideMenu()" onclick="switchMenu(this,'work')" href="#nav-wrap-zh">Work</a>
             <ul id="work">
                 <li><a href="">　學術研究　</a></li>
-                <li><a href="https://oz.nthu.edu.tw/~u9621125/project/?lang=zh">　業餘項目　</a></li>
+                <li><a href="https://gj94fu4.github.io/project/?lang=zh">　業餘項目　</a></li>
             </ul>
         </li>
         -->
-        <li><a href="https://oz.nthu.edu.tw/~u9621125/project/?lang=zh">　業餘項目　</a></li>
+        <li><a href="https://gj94fu4.github.io/project/?lang=zh">　業餘項目　</a></li>
         <!-- <li><a href="">Research</a></li> -->
         <li><a onclick="document.body.className='en'" style="cursor: pointer">　中/EN　</a></li>
     </ul> <!-- end #nav-zh -->
