--- a/profile/index.html
+++ b/profile/index.html
@@ -235,7 +235,7 @@
 							<div class="twelve columns">
 
 									<h3>Cosmos Wanderer Studio</h3>
-									<p class="info">Cofounder, Writer, and Photographer <span>&bull;</span> <em class="date">Since February 2019</em></p>
+									<p class="info">Cofounder, Writer, and Photographer <span>&bull;</span> <em class="date">February 2019 - December 2022</em></p>
 
 									<h6><dl><dt>Outdoor Education Instructor, Decathlon Club (Decathlon Taiwan Co. Ltd.)</dl></h6>
 										"A Brief Guide to Stargazing for Hikers" <br>
@@ -319,7 +319,7 @@
 							<div class="twelve columns">
 
 									<h3>National Taichung University of Education</h3>
-									<p class="info">Advisor of Astronomy Research Club <span>&bull;</span> <em class="date">Since September 2020</em></p>
+									<p class="info">Advisor of Astronomy Research Club <span>&bull;</span> <em class="date">September 2020 - June 2022</em></p>
 
 									<p></p>
 
