--- a/profile/index.html
+++ b/profile/index.html
@@ -470,8 +470,8 @@
 							<div class="row item">
 									<div class="twelve columns">
 
-										<h3>Lonely Planet Taiwan</h3>
-										<p class="info">Invited Speaker <span>&bull;</span> <em class="date">December 2014</em></p>
+										<h3>Cite Publishing Co. Ltd.</h3>
+										<p class="info">Invited Speaker of "Lonely Planet Taiwan" <span>&bull;</span> <em class="date">December 2014</em></p>
 
 										<h6><dl><dt>Go Camping with Lonely Planet</dl></h6>
 										<p></p>
@@ -758,7 +758,7 @@
 							<div class="twelve columns">
 
 									<h3>宇宙浪人工作室</h3>
-									<p class="info">共同創辦人（文字工作者、攝影師） <span>&bull;</span> <em class="date">2019 年 2 月至今</em></p>
+									<p class="info">共同創辦人（文字工作者、攝影師） <span>&bull;</span> <em class="date">2019 年 2 月 - 2022 年 12 月</em></p>
 
 									<h6><dl><dt>台灣迪卡儂運動社特約教練</dl></h6>
 										登上高山看星星：山人野外觀星指南 <br>
@@ -850,7 +850,7 @@
 							<div class="twelve columns">
 
 									<h3>國立臺中教育大學</h3>
-									<p class="info">天文學研究社指導教師 <span>&bull;</span> <em class="date">2020 年 9 月至今</em></p>
+									<p class="info">天文學研究社指導教師 <span>&bull;</span> <em class="date">2020 年 9 月 - 2022 年 6 月</em></p>
 
 									<p></p>
 
@@ -1000,8 +1000,8 @@
 							<div class="row item">
 									<div class="twelve columns">
 
-										<h3>Lonely Planet Taiwan</h3>
-										<p class="info">特約講師 <span>&bull;</span> <em class="date">2014 年 12 月</em></p>
+										<h3>城邦出版社</h3>
+										<p class="info">《孤獨星球》雜誌特約講師 <span>&bull;</span> <em class="date">2014 年 12 月</em></p>
 
 										<h6><dl><dt>來去野外住一晚</dl></h6>
 										<p></p>
