--- a/profile/index.html
+++ b/profile/index.html
@@ -97,26 +97,17 @@
 						<h1>Wen-Hsuan Lucky Chang</h1></p>
 						<h2>About Me</h2>
 
-						<p style="margin-top: 20px;">I love nature, especially mountain. Mountain is a fascinating place for me to contact with nature. 
-									When I was a student, I usually went hiking during holidays
-									and thus built the tradition of monthly hiking of our research group. 
-									I even invited François Bouchet, a cosmologist from the IAP Paris, to hike Mount Qixing during his visit.
-									In addition to suburban mountains, I like to trek high mountains as well. 
-									I have been to Mount Fuji (Japan), Mount Sylvia (Taiwan), Mauna Loa (Hawaii), as well as a couple of great mountains around the world.
-						<p style="margin-top:-15px;">On the other hand, I love to gaze the night sky. 
-									The reason I love my job as being a cosmologist to study the origin of our universe is that
-									the shining stars in the dark space always make my heart calm and safe.
-									When I was an operator at the AMiBA site in Hawaii, I always looked at the night sky in a daze
-									and sometimes set up my camera to take photos of galaxies and nebula.
-									I loved to do so since I was undergraduate.
-									I joined the Astronomy Club in National Tsing Hua University and served as the leader for a year.
-									My infatuation with the night sky encouraged me to support a number of stargazing activities and share the scientific knowledge to the public.
-						<p style="margin-top:-15px;">Therefore, I became a volunteer for promotional activities of popular science for many times.
-									The most impressive ones were the amateur telescope making camps directed by Professor Jiun-Huei Proty Wu.
-									In these camps, we taught the participants from children to adults to make their own telescopes by using simple materials and techniques.
-									I was also invited by student associations of high schools and universities for giving public talks.
-									I feel really happy when I share my knowledge to others.
-									It is like what my advisor said: "What taken from the society is used in the interests of the society."</p>
+						<p style="margin-top: 20px;">
+							I have a profound love for nature, particularly mountains, as they provide a captivating connection to the natural world. During my student years, I cultivated a tradition of monthly hikes with our research group, even hosting François Bouchet, a cosmologist from IAP Paris, for a memorable hike up Mount Qixing.
+						<p style="margin-top:-15px;">
+							In addition to exploring suburban mountains, I've trekked some of the world's famous routes, including Camino de Santiago in Spain, the Holy Ridge in Taiwan, Tsurugi-dake Traverse in Japan, and Mauna Loa in Hawaii.
+						<p style="margin-top:-15px;">
+							On another note, my fascination extends to the night sky. Working as a cosmologist investigating the origins of our universe is a passion, fueled by the calming effect of stars glittering in the dark expanse. During my time as an operator at the AMiBA site in Hawaii, I often found solace in gazing at the night sky, capturing galaxies and nebulae through my camera lens. This passion began during my undergraduate years when I led the Astronomy Club at National Tsing Hua University.
+						<p style="margin-top:-15px;">
+							Motivated by my love for the night sky, I've actively supported various stargazing events and engaged in public outreach to share scientific knowledge. Volunteering for popular science promotion, particularly during amateur telescope making camps directed by Professor Jiun-Huei Proty Wu, has been a rewarding experience. In these camps, participants, spanning from children to adults, learn to craft their telescopes using simple materials and techniques.
+						<p style="margin-top:-15px;">
+							I've also had the privilege of delivering public talks, invited by student associations from high schools to universities. Sharing my knowledge brings me immense joy, aligning with my advisor's wise words: "What is taken from society is used in the interests of society."
+						</p>
 
 						<div class="row">
 
@@ -226,7 +217,7 @@
 
 									<h3>Universe Resources Technology Co. Ltd.</h3>
 									<p class="info">Research and Development Manager <span>&bull;</span> <em class="date">Since February 2022</em></p>
-									<p class="info">Research Fellow <span>&bull;</span> <em class="date">Since October 2021</em></p>
+									<p class="info">Post-doctoral Research Fellow <span>&bull;</span> <em class="date">Since October 2021</em></p>
 									<p></p>
 
 							</div>
@@ -623,26 +614,12 @@
 						<h1>張文軒（Lucky Chang）</h1></p>
 						<h2>關於我</h2>
 
-						<p style="margin-top: 20px;">　　
-							我是探索者，也是說故事的人。
-							在過去漫長的歲月裡，我用心潛修、努力學習所謂科學知識了解大自然。
-							我登山，我觀星，我旅行，我研究宇宙從何而生、又將如何消亡。
-							我找尋存在的意義和目標，
-							並在短暫而渺小的生命裡，理解痛苦，尋求快樂，然後朝真理邁出一小步。
-						<p style="margin-top:-15px;">　　
-							我時常在週末或假日去健行，也為我的研究小組建立每月爬山的傳統，
-							並邀請來台參加會議的宇宙學家 François Bouchet 到七星山以及太魯閣健行。
-							除了郊山以外，我也攀登台灣百岳、富士山、毛納羅亞（夏威夷）等高山，
-							更走過一段追尋耶穌門徒聖雅各的朝聖者之路，
-							如果有機會，我希望有幸能拜訪更多大山，以及擁有深刻故事的步道。
-						<p style="margin-top:-15px;">　　
-							在夏威夷擔任天文台操作員時，我喜歡獨自凝望夜空，
-							看見星星在黑夜閃爍，會覺得平靜又心安。
-							有時候，我會架起相機捕捉美麗的深空天體，
-							在大學畢業前，我便迷戀天文攝影，並且加入天文社擔任一年社長。
-							帶領社團的過程中，我籌辦並且支援觀星活動，
-							我發現將天文與科學的知識分享給普羅大眾，會感到滿足與快樂，
-							促使我投入更多心思在科學普及教育。
+						<p style="margin-top: 20px;">
+							我是探索者，也是說故事的人。在過去漫長的歲月裡，我用心潛修，努力學習所謂科學知識理解大自然。我登山，我觀星，我旅行，我研究宇宙從何而生、又將如何消亡。我思索存在的意義和目標，並在短暫而渺小的生命裡，理解痛苦，尋求自在，努力朝真理邁出一小步。
+						<p style="margin-top:-15px;">
+							我時常在週末或假日去健行，也為我的研究小組建立每月爬山的傳統，並邀請來台參加會議的宇宙學家 François Bouchet 到七星山及太魯閣健行。除了郊山以外，我也攀登台灣百岳、日本百名山、毛納羅亞（夏威夷）等高山，更走過一段追尋耶穌門徒聖雅各的朝聖者之路，如果有機會，我希望有幸能走訪地球上更多角落，步上那些擁有深刻故事的步道。
+						<p style="margin-top:-15px;">
+							在夏威夷擔任天文台操作員時，我喜歡獨自凝望夜空，看見星星在黑夜閃爍，會覺得平靜又心安。有時候，我會架起相機捕捉美麗的深空天體。在大學畢業前，我便迷戀天文攝影，並加入天文社擔任一年社長。帶領社團的過程中，我籌辦並且支援觀星活動，我發現將天文與科學的知識分享給普羅大眾，會感到滿足與快樂，促使我投入更多心思在科學普及教育。
 						<p></p>
 
 						<div class="row">
@@ -652,7 +629,7 @@
 									<p class="address" style="margin-top: 20px;">
 												<span>十方資源科技股份有限公司</span><br>
 												<span>台北市大安區忠孝東路三段 96 號 8 樓</span><br>
-												<span>郵遞區號：106454（3+3）</span></p>
+												<span>郵遞區號：106454</span></p>
 							</div>
 
 							<div class="six columns">
