--- a/profile/index.html
+++ b/profile/index.html
@@ -18,7 +18,7 @@
 		<!-- Script
 		================================================== -->
 		<script src="js/modernizr.js"></script>
-		<script src="https://gj94fu4.github.io/js/w3.js" defer></script>
+		<script src="../js/w3.js" defer></script>
 
 		<!-- Favicons
 		================================================== -->
