--- a/profile/index.html
+++ b/profile/index.html
@@ -1003,6 +1003,7 @@
 				<div class="bars">
 						<ul class="skills">
 						<li><span class="bar-expand matlab"></span><em>Matlab</em></li>
+						<li><span class="bar-expand python"></span><em>Python</em></li>
 						<li><span class="bar-expand latex"></span><em>LaTeX</em></li>
 						<li><span class="bar-expand html"></span><em>HTML/CSS</em></li>
 					</ul>
