--- a/profile/cv-for-print.html
+++ b/profile/cv-for-print.html
@@ -51,18 +51,26 @@
    <section id="about">
 
       <div class="row">
-         <div class="twelve columns main-col">
+         <div class="nine columns main-col">
 
             <h1>Wen-Hsuan Lucky Chang</h1></p>
 
                <div class="twelve columns">
                   <p class="address">
-				         Address: No.1, Section 4, Roosevelt Road, Taipei 10617, Taiwan<br>
-                     E-mail: f00222018@ntu.edu.tw (business); gj94fu4@hotmail.com (personal)<br>
-                     Mobile: +886 (0)958-479701<br>
-                     Website: https://gj94fu4.github.io/
+				         		Location: Taipei, Taiwan<br>
+                    E-mail: f00222018@ntu.edu.tw<br>
+                    Mobile: +886 (0)958-479701<br>
+                    Website: https://gj94fu4.github.io/profile/
                   </p>
                </div>
+
+         </div> <!-- end .main-col -->
+
+         <div class="three columns main-col">
+
+					</p>
+					<img class="profile-pic" src="../img/logo-mini.jpg" alt="lucky house" />
+					</p>
 
          </div> <!-- end .main-col -->
       </div>
@@ -97,6 +105,15 @@
          <div class="twelve columns header-col">
             <h1><span>Business</span></h1>
             <p></p>
+
+               <div class="twelve columns">
+
+                  <h3>Universe Resources Technology Co. Ltd.</h3>
+                  <p class="info">Research and Development Manager <span>&bull;</span> <em class="date">Since February 2022</em></p>
+									<p class="info">Post-doctoral Research Fellow <span>&bull;</span> <em class="date">Since October 2021</em></p>
+                  <p></p><p></p>
+                  
+               </div>
 
                <div class="twelve columns">
 
