--- a/profile/index.html
+++ b/profile/index.html
@@ -216,7 +216,7 @@
 
 									<h3>Universe Resources Technology Co. Ltd.</h3>
 									<p class="info">Research and Development Manager <span>&bull;</span> <em class="date">Since February 2022</em></p>
-									<p class="info">Post-doctoral Research Fellow <span>&bull;</span> <em class="date">Since October 2021</em></p>
+									<p class="info">Principal Researcher <span>&bull;</span> <em class="date">Since October 2021</em></p>
 									<p></p>
 
 							</div>
@@ -321,7 +321,7 @@
 							<div class="twelve columns">
 
 									<h3>National Taiwan University</h3>
-									<p class="info">Lecturer of Space Science Society <span>&bull;</span> <em class="date">September 2013 - June 2015</em></p>
+									<p class="info">Lecturer of Space Science Society <span>&bull;</span> <em class="date">September 2013 - June 2018</em></p>
 
 									<h6><dl><dt>We are all Starkids</dl></h6>
 									Talk to Hsinchu Girls' Senior High School (March 2018 at Lulin Observatory)<br>
@@ -438,7 +438,7 @@
 										<p></p>
 
 										<h3>Mount Phoenix Observatory (MPO)</h3>
-										<p class="info">Observatory Introducer <span>&bull;</span> <em class="date">January 2013 - January 2016</em></p>
+										<p class="info">Observatory Guide and Operator <span>&bull;</span> <em class="date">January 2013 - January 2016</em></p>
 
 										<h6><dl><dt>Regular Activities</dl></h6>
 												January 2016, BBC Winter Astronomy Camp<br>
@@ -838,7 +838,7 @@
 							<div class="twelve columns">
 
 									<h3>國立臺灣大學</h3>
-									<p class="info">太空科學研究社講師 <span>&bull;</span> <em class="date">2013 年 9 月 - 2015 年 6 月</em></p>
+									<p class="info">太空科學研究社講師 <span>&bull;</span> <em class="date">2013 年 9 月 - 2018 年 6 月</em></p>
 
 									<h6><dl><dt>我們都是星星之子</dl></h6>
 									國立新竹女中天文社鹿林天文台參訪課程<br>
