--- a/profile/index.html
+++ b/profile/index.html
@@ -216,7 +216,7 @@
 
 									<h3>Universe Resources Technology Co. Ltd.</h3>
 									<p class="info">Research and Development Manager <span>&bull;</span> <em class="date">Since February 2022</em></p>
-									<p class="info">Principal Researcher <span>&bull;</span> <em class="date">Since October 2021</em></p>
+									<p class="info">Leading Scientist <span>&bull;</span> <em class="date">Since October 2021</em></p>
 									<p></p>
 
 							</div>
