--- a/profile/index.html
+++ b/profile/index.html
@@ -310,7 +310,7 @@
 							<div class="twelve columns">
 
 									<h3>National Taichung University of Education</h3>
-									<p class="info">Advisor of Astronomy Research Club <span>&bull;</span> <em class="date">September 2020 - June 2022</em></p>
+									<p class="info">Faculty Advisor of Astronomy Research Club <span>&bull;</span> <em class="date">September 2020 - June 2022</em></p>
 
 									<p></p>
 
