--- a/profile/index.html
+++ b/profile/index.html
@@ -395,14 +395,14 @@
 									<div class="twelve columns">
 
 										<h3>American Institute in Taiwan</h3>
-										<p class="info">Judge <span>&bull;</span> <em class="date">October 2019</em></p>
+										<p class="info">Preliminary Judge <span>&bull;</span> <em class="date">October 2019</em></p>
 
-										<h6><dl><dt>Third NASA Hackathon Taiwan</dl></h6>
+										<h6><dl><dt>The Third NASA Hackathon Taiwan</dl></h6>
 										<p></p>
 
-										<p class="info">Invited Photographer <span>&bull;</span> <em class="date">April 2017</em></p>
+										<p class="info">Photographer <span>&bull;</span> <em class="date">April 2017</em></p>
 
-										<h6><dl><dt>First NASA Hackathon Taiwan</dl></h6>
+										<h6><dl><dt>The First NASA Hackathon Taiwan</dl></h6>
 										<p></p>
 
 									</div>
