--- a/profile/index.html
+++ b/profile/index.html
@@ -18,7 +18,6 @@
 		<!-- Script
 		================================================== -->
 		<script src="js/modernizr.js"></script>
-		<script src="../js/w3.js" defer></script>
 
 		<!-- Favicons
 		================================================== -->
@@ -38,10 +37,12 @@
 <!-- Navibar -->
 <div lang="en">
 <div w3-include-html="../navibar/navibar.html"></div>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 <script> w3.includeHTML(); </script>
 </div>
 <div lang="zh">
 <div w3-include-html="../navibar/navibar_zh.html"></div>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 <script> w3.includeHTML(); </script>
 </div>
 
