--- a/project/amiba-on-site/index.html
+++ b/project/amiba-on-site/index.html
@@ -211,16 +211,10 @@
 					<h2 class="heading-colored">AMiBA and its science</h2>
 					<div style="text-align:justify">
 					<p>
-						AMiBA was constructed by Institute of Astronomy and Astrophysics, Academia Sinica (ASIAA) 
-						with a couple collaborators including Department of Physics, National Taiwan University (NTU).
-						Routine science operation took place in 2007 to 2008 (primary) and 2011 to 2014 (upgraded).
+						AMiBA was constructed by the Institute of Astronomy and Astrophysics, Academia Sinica (ASIAA), with a couple of collaborators, including the Department of Physics of National Taiwan University (NTU). Routine scientific operations occurred from 2007 to 2008 (primary) and from 2011 to 2014 (upgraded).
 					</p>
 					<p>
-						The purpose of AMiBA was to precisely measure the photons of cosmic microwave background (CMB) 
-						which were emitted from the early universe and warmed up by galaxy clusters.
-						Such photons told people how our universe grew up and what it looks like on large scale today.
-						We used AMiBA data to identified the density and temperature of the hot gas in those clusters, 
-						which traces the underlying dark matter distribution.
+						The purpose of AMiBA was to precisely measure the photons of the cosmic microwave background (CMB), which were emitted from the early universe and warmed up by galaxy clusters. Such photons provided insights to researchers about how our universe grew up and what it looks like on a large scale today. We used AMiBA data to identify the density and temperature of the hot gas in those clusters, which traces the underlying dark matter distribution.	
 					</p>
 					<p><a href="http://ytla.asiaa.sinica.edu.tw/" class="read-more" target="_blank">Read more <i class="icon-chevron-right"></i></a></p>
 					</div>
@@ -276,8 +270,7 @@
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn" lang="en">
 					<h1>What we did during the operation</h1>
 					<p class="sub"><br/>
-						Based in the downtown Hilo, we headed to the AMiBA site once a week for a three- or four-night observation.
-						Measurment started at around 6pm and roughly took 12 hours.
+						Based in downtown Hilo, we headed to the AMiBA site once a week for a three- or four-night observation. Measurement started at around 6 pm and roughly took 12 hours.
 					</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Works</p>
 				</div>
@@ -300,10 +293,7 @@
 							<h3>Monitoring Weather</h3>
 							<div style="text-align:justify">
 							<p>
-								Water vapor in the atmosphere would seriously absorb microwave,
-								therefore, non-cloudy weather with low humidity (typically below 40%) 
-								was required for our observation.
-								We won't uncover the shield of observatory if the weather condition was bad such as cloudy or rainy.
+								Water vapor in the atmosphere would significantly absorb microwaves; therefore, clear weather with low humidity (typically below 40%) was required for our observation. We wouldn't uncover the shield of the observatory if the weather condition was bad, such as cloudy or rainy.
 							</p>
 							</div>
 						</div>
@@ -317,10 +307,7 @@
 							<h3>Preparing Observation</h3>
 							<div style="text-align:justify">
 							<p>
-								To avoid thermal deformation during observation,
-								we opened the shield of observatory and lifted the platform of detectors 
-								to the standby position to let the machine reach thermal equilibrium with the environment.
-								Then we checked the status of all receivers and offlined the bad ones.
+								To avoid thermal deformations during observation, we opened the shield of the observatory and lifted the platform of detectors to the standby position to let the machine reach thermal equilibrium with the environment. Then we checked the status of all receivers and offline the bad ones.
 							</p>
 							</div>
 						</div>
@@ -334,10 +321,7 @@
 							<h3>Measuring CMB Signals</h3>
 							<div style="text-align:justify">
 							<p>
-								Followed the observational plan, we sent commands to manipulate the machine.
-								There were two equal-time patches in a detection,
-								one was directly measuring signals from a galaxy cluster and another one was measuring signals 
-								from a blank sky beside the galaxy cluster.
+								Following the observational plan, we sent commands to manipulate the machine. There were two equal-time patches in a detection, one directly measuring signals from a galaxy cluster and another one measuring signals from a blank sky beside the galaxy cluster.
 							</p>
 							</div>
 						</div>
@@ -354,10 +338,7 @@
 							<h3>Collecting Calibration Date</h3>
 							<div style="text-align:justify">
 							<p>
-								Calibrators played an important role of standard candles
-								which set references to calibrate strength and phase of the signals.
-								We used the planets in the solar system as the calibrators
-								because they were bright enough and their real-time properties were well-known.
+								Calibrators played an important role as standard candles that set references to calibrate the strength and phase of the signals. We used the planets in the solar system as the calibrators because they were bright enough, and their real-time properties were well-known.
 							</p>
 							</div>
 						</div>
@@ -371,9 +352,7 @@
 							<h3>Writing Daily Reports</h3>
 							<div style="text-align:justify">
 							<p>
-								The daily report recorded the weather conditions, status of the instruments, and real observational schedule.
-								It also demonstrated the fettle of all baselines of the interferometer as simple diagrams.
-								We posted the report on our science blog even there was no observation.
+								The daily report recorded the weather conditions, the status of the instruments, and the real observational schedule. It also demonstrated the condition of all baselines of the interferometer as simple diagrams. We posted the report on our science blog even if there was no observation.
 							</p>
 							</div>
 						</div>
@@ -387,9 +366,7 @@
 							<h3>Restoring Instruments</h3>
 							<div style="text-align:justify">
 							<p>
-								Parked the platform of receivers, closed the shield of observatory, put the covers back to optical telescopes,
-								and turned off the machine, we called it a "day" at dawn.
-								After completed the standard operating procedure, we would have breakfast and went to bed.
+								After completing the standard operating procedure, we would have breakfast and go to bed at dawn, closing the shield of the observatory, putting the covers back on the optical telescopes, and turning off the machine. We called it a "day."
 							</p>
 							</div>
 						</div>
@@ -507,8 +484,7 @@
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn" lang="en">
 					<h1>My co-workers</h1>
 					<p class="sub"><br/>
-						My advisor Professor Jiun-Huei Proty Wu led the AMiBA data-analysing team in NTU
-						and thus sent students to the AMiBA site as on-site scientists working with local operators.
+						My advisor, Professor Jiun-Huei Proty Wu, led the AMiBA data-analyzing team in NTU and thus sent students to the AMiBA site as on-site scientists, working with local operators.
 					</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Team</p>
 				</div>
@@ -531,19 +507,10 @@
 				<div class="col-md-7 col-md-pull-4 animate-box" data-animate-effect="fadeInRight" style="text-align:justify" lang="en">
 					<h3>Jia-Long Johnny Yeh</h3>
 					<p>
-						Johnny travelled with me to the AMiBA site from April to May, 2014
-						when he was a doctoral student advised by Professor Jiun-Huei Proty Wu.
-						His expert was in cosmic string, in particular the induced CMB B-mode polarization.
-						Johnny is good at programming.
-						His superb programming skill enabled him to perform numerical simulations of cosmic strings
-						on large scale with high resilution and dynamical range.
-						He got the doctoral degree and started to work in WorldQuant Research LLC Taiwan Branch
-						as a quantitative finance researcher in 2017.
+						Johnny travelled with me to the AMiBA site from April to May 2014, when he was a doctoral student advised by Professor Jiun-Huei Proty Wu. His expertise was in cosmic strings, in particular, the induced CMB B-mode polarization. Johnny is good at programming. His superb programming skills enabled him to perform numerical simulations of cosmic strings on a large scale with high resolution and dynamic range. He earned his Ph.D. and started to work at WorldQuant Research LLC Taiwan Branch as a quantitative finance researcher in 2017.
 					</p>
 					<p>
-						Johnny worked with Solomon Ho at the AMiBA site.
-						On the other hand, he developed a simple program for operators to write the daily report.
-						The program provided an efficient way to record information and dramatically reduced human error.
+						Johnny worked with Solomon Ho at the AMiBA site. On the other hand, he developed a simple program for operators to write the daily report. This program provided an efficient way to record information and dramatically reduced human error.
 					</p>
 				</div>
 				<div class="col-md-7 col-md-pull-4 animate-box" data-animate-effect="fadeInRight" style="text-align:justify" lang="zh">
@@ -572,14 +539,7 @@
 				<div class="col-md-7 col-md-push-1 animate-box" data-animate-effect="fadeInLeft" style="text-align:justify" lang="en">
 					<h3>Shang-Ping Pai</h3>
 					<p>
-						Shang-Ping was the partner of my first AMiBA journey from June to July, 2013
-						when he was a master student advised by Professor Jiun-Huei Proty Wu.
-						By using the data of Sunyaev–Zel'dovich (SZ) effect from AMiBA
-						and gravitational lensing from Hubble Space Telescope,
-						he produced a projected two-dimensional map of baryonic fraction for galaxy clusters
-						allowing scientists to test the dark matter models.
-						After received the master degree in 2017,
-						he became a doctoral student in Professor Wu's group.
+						Shang-Ping was the partner on my first AMiBA journey from June to July 2013 when he was a master student advised by Professor Jiun-Huei Proty Wu. By using the data of the Sunyaev–Zel'dovich (SZ) effect from AMiBA and gravitational lensing from the Hubble Space Telescope, he produced a projected two-dimensional map of baryonic fraction for galaxy clusters, allowing scientists to test dark matter models. After receiving the master's degree in 2017, he became a doctoral student in Professor Wu's group.
 					</p>
 					<p>
 						Shang-Ping worked with Emmanuel Nunez at the AMiBA site during his visit in 2013.
@@ -604,15 +564,10 @@
 				<div class="col-md-6 col-md-pull-0 animate-box more-member" data-animate-effect="fadeInRight" style="text-align:justify" lang="en">
 					<h3>Fu-Cheng Wang</h3>
 					<p>
-						Fu-Cheng was a core member of AMiBA team since he was a doctoral student in 2004.
-						He focused his doctoral research on power spectrum and SZ effect of CMB.
-						After combining SZ data from AMiBA and several other experiments to deliver the multi-frequency analysis,
-						he yielded better estimation for distributions of dark matter in a coupled of galaxy clusters.
-						Fu-Cheng kept working with AMiBA as a postdoctoral fellow in Professor Wu's group since 2011.
+						Fu-Cheng was a core member of the AMiBA team since he was a doctoral student in 2004. He focused his doctoral research on the power spectrum and SZ effect of CMB. After combining SZ data from AMiBA and several other experiments to deliver the multi-frequency analysis, he yielded a better estimation for the distributions of dark matter in a couple of galaxy clusters. Fu-Cheng kept working with AMiBA as a postdoctoral fellow in Professor Wu's group since 2011.
 					</p>
 					<p>
-						Fu-Cheng was the first observational partner of me.
-						He directed me to operate instruments when we stayed in the AMiBA site for three nights.
+						Fu-Cheng was the first observational partner of mine. He directed me to operate instruments when we stayed at the AMiBA site for three nights."
 					</p>
 				</div>
 				<div class="col-md-6 col-md-pull-0 animate-box more-member" data-animate-effect="fadeInRight" style="text-align:justify" lang="zh">
@@ -630,15 +585,10 @@
 				<div class="col-md-6 col-md-pull-0 animate-box more-member" data-animate-effect="fadeInLeft" style="text-align:justify" lang="en">
 					<h3>Chih-Wei Locutus Huang</h3>
 					<p>
-						Locutus was also a core member of AMiBA team since he was a doctoral student in 2004.
-						He solved several key issues during the operation of AMiBA in the early stage
-						and studied the properties of galaxy clusters using AMiBA data.
-						After completed his doctoral research, he moved to ASIAA as a postdoctoral fellow in 2009.
-						He then became a supported scientist of Greenland Telescope (GLT) and Very Long Baseline Array (VLBA) since 2012.
+						Locutus was also a core member of the AMiBA team since he was a doctoral student in 2004. He solved several key issues during the operation of AMiBA in the early stage and studied the properties of galaxy clusters using AMiBA data. After completing his doctoral research, he moved to ASIAA as a postdoctoral fellow in 2009. He then became a support scientist of Greenland Telescope (GLT) and Very Long Baseline Array (VLBA) since 2012.
 					</p>
 					<p>
-						Locutus worked with Fu-Cheng at the AMiBA site before the visit of Shang-Ping and me.
-						We completed the observation of the first time together.
+						Locutus worked with Fu-Cheng at the AMiBA site before Shang-Ping and my visit. We completed the observation for the first time together.
 					</p>
 				</div>
 				<div class="col-md-6 col-md-pull-0 animate-box more-member" data-animate-effect="fadeInLeft" style="text-align:justify" lang="zh">
