disable en/zh convertion

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
             <a class="btn btn-top" onclick="document.getElementById('work').style.display=''; document.getElementById('en').style.display='none'">Work</a>
             -->
             <a class="btn btn-top" href="project">Project</a>
-
+						<!-- 關閉中英切換按鈕
             <a class="btn btn-top" onclick="document.getElementById('en').style.display='none'; document.getElementById('zh').style.display=''">中文版</a>
+						-->
 
         </div>
         <div id="gallery" style="display:none">
