--- a/navibar/navibar.html
+++ b/navibar/navibar.html
@@ -74,7 +74,9 @@
         -->
         <li><a href="https://gj94fu4.github.io/project/">Project</a></li>
         <!-- <li><a href="">Research</a></li> -->
+				<!-- 關閉中英切換按鈕
         <li><a onclick="document.body.className='zh'" style="cursor: pointer">中/EN</a></li>
+				 -->
     </ul> <!-- end #nav -->
 
 </nav> <!-- end #nav-wrap -->
