--- a/profile/index.html
+++ b/profile/index.html
@@ -217,7 +217,18 @@
 
 									<h3>Universe Resources Technology Co. Ltd.</h3>
 									<p class="info">Research and Development Manager <span>&bull;</span> <em class="date">Since February 2022</em></p>
+									<h6><dl><dt>Software Design and Development</dl></h6>
+										Designing software based on customer requirements or project specifications <br>
+									<h6><dl><dt>Software Project Management</dl></h6>
+										Supervising programmers to complete scripts and software <br>
+										Managing the progress of projects <br>
 									<p class="info">Leading Scientist <span>&bull;</span> <em class="date">Since October 2021</em></p>
+									<h6><dl><dt>Geophysical Exploration Theory and Instruments</dl></h6>
+									<h6><dl><dt>GIS and Geophysical Data Analysis</dl></h6>
+									<h6><dl><dt>Deep Learning for Ore Deposit Distribution Modeling</dl></h6>
+										Utilizing deep learning techniques to construct models for predicting ore distributions <br>
+									<h6><dl><dt>Remote Sensing and UAV Operation</dl></h6>
+										Operate an unmanded arieal vihicle
 									<p></p>
 
 							</div>
@@ -229,12 +240,16 @@
 									<h3>Cosmos Wanderer Studio</h3>
 									<p class="info">Cofounder, Writer, and Photographer <span>&bull;</span> <em class="date">February 2019 - December 2022</em></p>
 
-									<h6><dl><dt>Outdoor Education Instructor, Decathlon Club (Decathlon Taiwan Co. Ltd.)</dl></h6>
-										"A Brief Guide to Stargazing for Hikers" <br>
-										"Hike and Travel along Raknus Selu Trails" <br>
-										"Introduction to Suburban Trails in Taipei Metropolitan Area" <br>
+									<h6><dl><dt>Outdoor Education Instructor, Decathlon Events (Decathlon Taiwan Co. Ltd.)</dl></h6>
+										Conducting outdoor lectures monthly <br>
 									<h6><dl><dt>Contributing Editor, Hiking Biji (The Note Co. Ltd.)</dl></h6>
+										Constructing mountain trail database <br>
+										Promoting Long-distance Trail (Taiwan Thousand Miles Trail Association) <br>
+										Developing travel information for the forestry regional trail (Forestry Bureau) <br>
+										Inventorying Hakka Township Tourism Resources (Hakka Affairs Council) <br>
 									<h6><dl><dt>Cultural Correspondent, Cultural Affairs Bureau of New Taipei City</dl></h6>
+										Reporting cultural events organized by the city government <br>
+										Investigating Traditional Industry in Sanchong and Luzhou <br>
 									<p></p>
 
 							</div>
@@ -271,24 +286,18 @@
 
 									<p class="info">Teaching Assistant in Department of Physics <span>&bull;</span> <em class="date">September 2011 - June 2016</em></p>
 
-									<h6><dl><dt>Applied Mathematics II</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=62" target="_blank">Prof. Jiun-Huei Proty Wu</a> for sophomore in Fall 2015
-									<h6><dl><dt>Mechanics I</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=44" target="_blank">Prof. Hsi-Sheng Goan</a> for sophomore in Fall 2013
-									<h6><dl><dt>Mechanics II</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=44" target="_blank">Prof. Hsi-Sheng Goan</a> for sophomore in Spring 2013 and Spring 2014
-									<h6><dl><dt>Electricity and Magnetism I</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=38" target="_blank">Prof. Yih-Yuh Chen</a> for sophomore in Fall 2015
-									<h6><dl><dt>Electricity and Magnetism II</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=38" target="_blank">Prof. Yih-Yuh Chen</a> for sophomore in Spring 2016
-									<h6><dl><dt>Applied Mathematics IV</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=62" target="_blank">Prof. Jiun-Huei Proty Wu</a> for junior in Fall 2011 and Fall 2012
-									<h6><dl><dt>Statistical Physics I</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=54" target="_blank">Prof. Guang-Yu Guo</a> for graduate in Fall 2014 and Fall 2015
+									<h6><dl><dt>Applied Mathematics</dl></h6>
+									Lectured by Prof. Jiun-Huei Proty Wu for junior in Fall 2011 and Fall 2012, and for sophomore in Fall 2015
+									<h6><dl><dt>Mechanics </dl></h6>
+									Lectured by Prof. Hsi-Sheng Goan for sophomore in Spring 2013, Fall 2013, and Spring 2014
+									<h6><dl><dt>Electricity and Magnetism</dl></h6>
+									Lectured by Prof. Yih-Yuh Chen for sophomore in Fall 2015 and  Spring 2016
+									<h6><dl><dt>Statistical Physics</dl></h6>
+									Lectured by Prof. Guang-Yu Guo for graduate in Fall 2014 and Fall 2015
 									<h6><dl><dt>General Relativity</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=38" target="_blank">Prof. Yih-Yuh Chen</a> for graduate in Spring 2016
+									Lectured by Prof. Yih-Yuh Chen for graduate in Spring 2016
 									<h6><dl><dt>Cosmology</dl></h6>
-									Lectured by <a href="http://www.phys.ntu.edu.tw/webeng/member/main1.aspx?mem_id=62" target="_blank">Prof. Jiun-Huei Proty Wu</a> for graduate in Fall 2012, Fall 2013, and Fall 2014
+									Lectured by Prof. Jiun-Huei Proty Wu for graduate in Fall 2012, Fall 2013, and Fall 2014
 									<p></p>
 
 							</div>
@@ -324,17 +333,12 @@
 									<h3>National Taiwan University</h3>
 									<p class="info">Lecturer of Space Science Society <span>&bull;</span> <em class="date">September 2013 - June 2018</em></p>
 
-									<h6><dl><dt>We are all Starkids</dl></h6>
-									Talk to Hsinchu Girls' Senior High School (March 2018 at Lulin Observatory)<br>
-									<h6><dl><dt>Growing history of the universe</dl></h6>
-									Talk to Science Club of Changhua Girls' Senior High School<br>
-									Talk to Space Science Society
-									<h6><dl><dt>Common conceptual problems in cosmology</dl></h6>
-									Talk to Taiwan Astronomy Club Union (online talk)
-									<h6><dl><dt>LIGHTs from baby universe</dl></h6>
-									Talk to Space Science Society
-									<h6><dl><dt>Probing the mysterious universe</dl></h6>
-									Talk to Astronomy Association of Taoyuan Senior High School
+									<h6><dl><dt>Lectures for Student Clubs </dl></h6>
+										Space Science Society, National Taiwan University<br>
+										Astronomy Club, Hsinchu Girls' Senior High School<br>
+										Science Club, Changhua Girls' Senior High School<br>
+										Astronomy Association, Taoyuan Senior High School<br>
+										Taiwan Astronomy Club Union<br>
 									<p></p>
 
 							</div>
