--- a/profile/index.html
+++ b/profile/index.html
@@ -215,14 +215,24 @@
 						<div class="row item">
 							<div class="twelve columns">
 
+									<h3>Pared Inc. (dba Expo)</h3>
+									<p class="info">Software Engineer <span>&bull;</span> <em class="date">Since May 2024</em></p>
+									<p></p>
+
+							</div>
+						</div> <!-- item end -->
+
+						<div class="row item">
+							<div class="twelve columns">
+
 									<h3>Universe Resources Technology Co. Ltd.</h3>
-									<p class="info">Research and Development Manager <span>&bull;</span> <em class="date">Since February 2022</em></p>
+									<p class="info">Research and Development Manager <span>&bull;</span> <em class="date">February 2022 - May 2024</em></p>
 									<h6><dl><dt>Software Design and Development</dl></h6>
 										Designing software based on customer requirements or project specifications <br>
 									<h6><dl><dt>Software Project Management</dl></h6>
 										Supervising programmers to complete scripts and software <br>
 										Managing the progress of projects <br>
-									<p class="info">Leading Scientist <span>&bull;</span> <em class="date">Since October 2021</em></p>
+									<p class="info">Lead Scientist <span>&bull;</span> <em class="date">October 2021 - May 2024</em></p>
 									<h6><dl><dt>Geophysical Exploration Theory and Instruments</dl></h6>
 									<h6><dl><dt>GIS and Geophysical Data Analysis</dl></h6>
 									<h6><dl><dt>Deep Learning for Ore Deposit Distribution Modeling</dl></h6>
