--- a/profile/index.html
+++ b/profile/index.html
@@ -216,7 +216,7 @@
 							<div class="twelve columns">
 
 									<h3>Pared Inc. (dba Expo)</h3>
-									<p class="info">Software Engineer <span>&bull;</span> <em class="date">Since May 2024</em></p>
+									<p class="info">Software Engineer (Specializing in AI) <span>&bull;</span> <em class="date">Since May 2024</em></p>
 									<p></p>
 
 							</div>
