--- a/profile/index.html
+++ b/profile/index.html
@@ -115,18 +115,15 @@
 
 									<h2>Contact Information</h2>
 									<p class="address">
-												<span>Universe Resources Technology</span><br>
-												<span>8F, No. 96, Sect. 3, Zhongxiao E. Rd.</span><br>
-												<span>Taipei 106454, Taiwan</span></p>
+												<span><a href="https://www.getexpo.com/" target="_blank">Expo</a></span><br>
+												<span><a href="mailto:wenhsuan@getexpo.com" target="_blank">wenhsuan@getexpo.com</a></span><br>
+												<span><a href="tel:+886958479701" target="_blank">+886 (0)958-479701</a></span></p>
 							</div>
 
 							<div class="six columns">
 
 									<h2>　</h2>
 									<p class="address">
-												<span>f00222018@ntu.edu.tw (business) </span><br>
-												<span>gj94fu4@hotmail.com (personal) </span><br>
-												<span>+886 (0)958-479701</span></p>
 
 							</div>
 
