--- a/navibar/navibar_zh.html
+++ b/navibar/navibar_zh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+  <head>
 
     <!--- Basic Page Needs
     ================================================== -->
@@ -27,63 +27,53 @@
     <script src="js/modernizr.js"></script>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
 
-</head>
+  </head>
 
-<!-- Redirecting HTTP to HTTPS -->
-<script src="../js/redirect2https.js"></script>
+  <!-- Redirecting HTTP to HTTPS -->
+  <script src="../js/redirect2https.js"></script>
 
-<body>
+  <body>
 
-<!-- Mouse Keyboard Forbidden -->
-<script src="../js/nomousekeyboard.js"></script>
+  <!-- Mouse Keyboard Forbidden -->
+  <script src="../js/nomousekeyboard.js"></script>
 
-<!-- Header -->  
-<nav id="nav-wrap-zh">
+  <!-- Header -->  
+  <nav id="nav-wrap-zh">
 
     <a class="mobile-btn" href="#nav-wrap-zh" title="Show navigation">Show navigation</a>
     <a class="mobile-btn" href="##" title="Hide navigation">Hide navigation</a>
 
     <ul id="nav-zh" class="nav-zh" style="background-color:#333;">
-        <li><a href="https://gj94fu4.github.io/">　首頁　</a></li>
-        <li><a class="current" href="https://gj94fu4.github.io/profile/?lang=zh">　關於我　</a></li>
-        <li><a class="current" href="https://gj94fu4.github.io/world/?lang=zh">　相簿　</a></li>
-        <li><a onmouseover="switchMenu(this,'blog')" onmouseout="hideMenu()" onclick="switchMenu(this,'blog')" href="#nav-wrap-zh">　文字　</a>
-            <ul id="blog">
-                <li><a href="https://gj94fu4.github.io/blog/escapade/?lang=zh">大壯遊</a></li>
-                <li><a href="https://gj94fu4.github.io/blog/fairytale/?lang=zh">半路上的童話故事</a></li>
-                <li><a href="https://gj94fu4.github.io/blog/hoshino/?lang=zh">星野遊學</a></li>
-                <li><a href="https://gj94fu4.github.io/blog/island/?lang=zh">荒島札記</a></li>
-            </ul>
-        </li>
-        <!--
-        <li><a href="">Footprint</a></li>
-        <li><a onmouseover="switchMenu(this,'work')" onmouseout="hideMenu()" onclick="switchMenu(this,'work')" href="#nav-wrap-zh">Work</a>
-            <ul id="work">
-                <li><a href="">　學術研究　</a></li>
-                <li><a href="https://gj94fu4.github.io/project/?lang=zh">　業餘項目　</a></li>
-            </ul>
-        </li>
-        -->
-        <li><a href="https://gj94fu4.github.io/project/?lang=zh">　業餘項目　</a></li>
-        <!-- <li><a href="">Research</a></li> -->
-        <li><a onclick="document.body.className='en'" style="cursor: pointer">　中/EN　</a></li>
+      <li><a href="https://gj94fu4.github.io/">　首頁　</a></li>
+      <li><a class="current" href="https://gj94fu4.github.io/profile/?lang=zh">　關於我　</a></li>
+      <li><a class="current" href="https://gj94fu4.github.io/world/?lang=zh">　寫真集　</a></li>
+      <li><a onmouseover="switchMenu(this,'blog')" onmouseout="hideMenu()" onclick="switchMenu(this,'blog')" href="#nav-wrap-zh">　部落格　</a>
+        <ul id="blog">
+          <li><a href="https://gj94fu4.github.io/blog/escapade/?lang=zh">大壯遊</a></li>
+          <li><a href="https://gj94fu4.github.io/blog/fairytale/?lang=zh">半路上的童話故事</a></li>
+          <li><a href="https://gj94fu4.github.io/blog/hoshino/?lang=zh">星野遊學</a></li>
+          <li><a href="https://gj94fu4.github.io/blog/island/?lang=zh">荒島札記</a></li>
+        </ul>
+      </li>
+      <li><a href="https://gj94fu4.github.io/project/?lang=zh">　業餘計畫　</a></li>
+      <li><a onclick="document.body.className='en'" style="cursor: pointer">　中/EN　</a></li>
     </ul> <!-- end #nav-zh -->
 
-</nav> <!-- end #nav-wrap-zh -->
-<!-- Header End -->
+  </nav> <!-- end #nav-wrap-zh -->
+  <!-- Header End -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
-<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
+  <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
 
-<script src="js/jquery.flexslider.js"></script>
-<script src="js/waypoints.js"></script>
-<script src="js/jquery.fittext.js"></script>
-<script src="js/magnific-popup.js"></script>
-<script src="js/init.js"></script>
-<script src="js/navbar.js"></script>
+  <script src="js/jquery.flexslider.js"></script>
+  <script src="js/waypoints.js"></script>
+  <script src="js/jquery.fittext.js"></script>
+  <script src="js/magnific-popup.js"></script>
+  <script src="js/init.js"></script>
+  <script src="js/navbar.js"></script>
     
-<script src="js/visiable-menu.js" type="text/javascript"></script>
+  <script src="js/visiable-menu.js" type="text/javascript"></script>
 
-</body>
+  </body>
 </html>
