Modify the buttons of homapage

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div id="zh" style="display:none">
             <a class="btn btn-top" href="profile/?lang=zh">關於我</a>
 <!--            <a class="btn btn-top" onclick="document.getElementById('gallery-zh').style.display=''; document.getElementById('zh').style.display='none'">相簿</a> -->
-            <a class="btn btn-top" href="world/?lang=zh">相簿</a>
-            <a class="btn btn-top" onclick="document.getElementById('blog-zh').style.display=''; document.getElementById('zh').style.display='none'">文字</a>
+            <a class="btn btn-top" href="world/?lang=zh">寫真集</a>
+            <a class="btn btn-top" onclick="document.getElementById('blog-zh').style.display=''; document.getElementById('zh').style.display='none'">部落格</a>
 <!--            <a class="btn btn-top" href="">足跡</a> -->
 <!--            <a class="btn btn-top" onclick="document.getElementById('work-zh').style.display=''; document.getElementById('zh').style.display='none'">工作</a> -->
             <a class="btn btn-top" href="project/?lang=zh">業餘項目</a>
