Turn on `redirect2https` for the profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -33,7 +33,7 @@
     <script src="js/dynamicLoad.js" defer></script>
     <script src="js/collapse.js" defer></script>
     <script src="../js/nomousekeyboard.js"></script>
-    <!-- <script src="../js/redirect2https.js"></script> -->
+    <script src="../js/redirect2https.js"></script>
 
   </head>
 
