Modify the buttons of homapage

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="btn btn-top" onclick="document.getElementById('blog-zh').style.display=''; document.getElementById('zh').style.display='none'">部落格</a>
 <!--            <a class="btn btn-top" href="">足跡</a> -->
 <!--            <a class="btn btn-top" onclick="document.getElementById('work-zh').style.display=''; document.getElementById('zh').style.display='none'">工作</a> -->
-            <a class="btn btn-top" href="project/?lang=zh">業餘項目</a>
+            <a class="btn btn-top" href="project/?lang=zh">業餘計畫</a>
             <a class="btn btn-top" onclick="document.getElementById('zh').style.display='none'; document.getElementById('en').style.display=''">English</a>
         </div>
 <!--
